# SimpleEngine2D

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  deps.txt
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/src/core/: EditorRenderer.hpp  Gizmo.cpp  Gizmo.hpp  Panel.hpp
editor/src/panels/: Assets.hpp  Hierarchy.hpp  Properties.hpp  TopBar.hpp  Viewport.hpp
engine/: CMakeLists.txt
engine/include/SimpleEngine2D/components/: Audio.hpp  Camera.hpp  Collider.hpp  Mesh.hpp  PanelGui.hpp  RigidBody.hpp  TextGui.hpp  Transform.hpp  Weld.hpp
engine/include/SimpleEngine2D/core/: ComponentRegistry.hpp  ConfigManager.hpp  Engine.hpp  EntityManager.hpp  EventBus.hpp  PersistenceManager.hpp  Scene.hpp  SceneManager.hpp  System.hpp  TagManager.hpp
engine/include/SimpleEngine2D/events/: ChangeScene.hpp  CollisionEnter.hpp  CollisionExit.hpp  ControlAudio.hpp  InputBegan.hpp  InputEnded.hpp  MouseButtonDown.hpp  MouseButtonUp.hpp  MouseMotion.hpp  PlayAudio.hpp  RequestSceneChange.hpp
engine/include/SimpleEngine2D/systems/: Audio.hpp  Collision.hpp  Input.hpp  Physics.hpp  Render.hpp
engine/include/SimpleEngine2D/util/: CollisionAxis.hpp  Utils.hpp  glm_json.hpp  sdl_json.hpp
engine/src/core/: Engine.cpp  EntityManager.cpp  PersistenceManager.cpp  TagManager.cpp
engine/src/systems/: Audio.cpp  Collision.cpp  Input.cpp  Physics.cpp  Render.cpp
games/test-game/: CMakeLists.txt
games/test-game/src/: main.cpp
games/test-game/src/components/: AmmoComponent.hpp  DamageComponent.hpp  EnemyComponent.hpp  GunComponent.hpp  HealthComponent.hpp
games/test-game/src/events/: AddAmmo.hpp  EnemyDrops.hpp  OnEnemyDeath.hpp
games/test-game/src/factories/: EnemyFactory.cpp  EnemyFactory.hpp
games/test-game/src/scenes/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  TestScene.cpp  TestScene.hpp
games/test-game/src/systems/: EnemySystem.cpp  EnemySystem.hpp  GunSystem.cpp  GunSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PlayerHealthSystem.cpp  PlayerHealthSystem.hpp  SidewaysLookingSystem.cpp  SidewaysLookingSystem.hpp  SidewaysMovementSystem.cpp  SidewaysMovementSystem.hpp  TopDownLookingSystem.cpp  TopDownLookingSystem.hpp  TopDownMovementSystem.cpp  TopDownMovementSystem.hpp
scripts/: create-game.sh  install-deps.sh
